Update runtime code to not have handling for old Java releases
- Remove special handling for Java 6 and Java 7.
- Use java.util.Base64 for doing encoding and decoding without the
special handling for older Java versions and the use of reflection.